fixed #3898: as a user reading the documentation i would like to have a forward / backward button to jump from (indexwise seen) page to page

--- a/static/css/ecs/help.scss
+++ b/static/css/ecs/help.scss
@@ -232,6 +232,26 @@
         color: red;
         font-weight: bolder;
     }
+
+    .nav {
+        display: block;
+        width: 100%;
+        .prev {
+            width: 33%;
+            text-align: left;
+            display: inline-block;
+        }
+        .top {
+            width: 33%;
+            text-align: center;
+            display: inline-block;
+        }
+        .next {
+            width: 33%;
+            text-align: right;
+            display: inline-block;
+        }
+    }
 }
 
 #help_overlay {
